--- a/src/components/countryCard/countryCard.module.css
+++ b/src/components/countryCard/countryCard.module.css
@@ -5,12 +5,12 @@ ul{
 
 .country{
     display: flex;
-    flex-shrink: inherit;
+    /* flex-shrink: inherit; */
     flex-direction: column;
     /* border: 2px solid black; */
-    /* width: 100%; */
-    height: 45rem;
-    /* background-color: cornsilk; */
+    width: 35rem;
+    height: 49rem;
+    /* background-color: rgb(255, 204, 0); */
     /* padding: 2rem; */
     margin-bottom: 10rem;
     border-radius: 9px;
@@ -18,13 +18,6 @@ ul{
     -webkit-box-shadow: 0px 7px 23px -4px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 7px 23px -4px rgba(0, 0, 0, 0.2);
     color: black;
-}
-
-.country img{
-    /* background-color: burlywood; */
-    height: 25rem;
-    width: 35rem;
-    border-radius: 9px 9px 0 0 ;
 }
 
 .countryInfo{
@@ -45,4 +38,11 @@ ul{
     text-align: center;
     /* background-color:yellow ; */
     margin-bottom: 20px;
+}
+
+.flag{
+    width: 100%;
+    margin-left: 0%;
+    height: 30vh;
+    /* border: 2px solid red; */
 }
